--- a/StockManagement/package.json
+++ b/StockManagement/package.json
@@ -13,12 +13,14 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^22.9.1",
     "jest": "^29.7.0",
+    "prisma": "^5.22.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "@prisma/client": "^5.22.0",
     "lodash": "^4.17.21",
     "nanoid": "^3.3.7"
   }
